dark mode and fixing things

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body,html {
 	min-width: 100px;
 	font-family: 'DM Sans', sans-serif;
 }
+
 button {
 	background-color: #FFFFFF;
 	border: 2px solid #008CBA;
@@ -46,17 +47,26 @@ table {
 	height: 100%;
 	width: 100%;
 }
-h2 {
-	padding: 10px;
-}
-p {
-	padding: 10px;
-}
 ol {
   list-style-position: inside;
-  padding: 0px 10px 10px 10px;
+  padding: 0px;
 }
-
+#dark {
+    color: #FFFFFF;
+    background-color: #000000;
+}
+#dark-Focus {
+    background-color: #000000;
+}
+#dark-Break {
+    background-color: #2c627a;
+}
+#Focus {
+    background-color: #2c627a;
+}
+#Break {
+    background-color: #bcdeec;
+}
 .complete {
 	background-color: white;
 	border-radius: 10px;
@@ -99,10 +109,7 @@ ol {
   word-wrap:break-word;
   text-align:left;
 }
-.tlist:hover {
-	text-decoration: line-through;
-}
-.taskclicked {
+.taskListEntry:hover {
 	text-decoration: line-through;
 }
 #taskInput {
@@ -184,6 +191,10 @@ form button {
 	position: absolute;
 	width: 100%;
 }
+.infoHeaderh2, .infoHeaderp, .infoHeaderol {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
 #task {
 	width: 60%;
 	font-family: 'DM Sans', sans-serif;
@@ -192,7 +203,7 @@ form button {
 	border-style: solid;
 	border-radius: 5px;
 }
-#settingsBtn {
+#infoBtn, #settingsBtn {
 	border: 2px solid #008CBA;
 	margin:0 auto;
 	padding-top: 5px;
@@ -200,7 +211,7 @@ form button {
 	padding-right: 15px;
 	padding-left: 15px;
 }
-#settingsBtn:hover{
+#infoBtn:hover, #settingsBtn:hover{
 	background-color: #008CBA;
 	color: #FFFFFF;
 }
